Fix for JSONTOOL - Insert CUSTOM template Increased width of bootstrap container.

--- a/apps/site/priv/lib/bootstrap-3.0.1/css/bootstrap.css
+++ b/apps/site/priv/lib/bootstrap-3.0.1/css/bootstrap.css
@@ -1420,7 +1420,8 @@ pre code {
 
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    /*width: 1170px;*/
+    width: 90%;
   }
   .col-lg-1,
   .col-lg-2,
