--- a/apps/site/priv/lib/bootstrap-3.0.1/css/bootstrap.css
+++ b/apps/site/priv/lib/bootstrap-3.0.1/css/bootstrap.css
@@ -1420,8 +1420,7 @@ pre code {
 
 @media (min-width: 1200px) {
   .container {
-    /*width: 1170px;*/
-    width: 90%;
+    width: 1170px;
   }
   .col-lg-1,
   .col-lg-2,
