--- a/apps/site/priv/css/main.css
+++ b/apps/site/priv/css/main.css
@@ -1,13 +1,9 @@
+/* Override the bootstrap container width */
 .container {
     max-width: none !important;
     width: 1366px;
 }
 
-.jsonContainer {
-    float: left;
-    width: 49%;
-    height: 100%;
-}
 #notification_message p {
     margin: 0px;
 }
@@ -51,68 +47,4 @@
     to {
        background-position: -80px 0;
     }
-}
-
-#Officers #modify {
-    width: 145px;
-    display: inline-block;
-    padding-left: 34px;
-
-}
-
-#Officers #GeneralCommanders {
-    width: 60%;
-}
-
-#Officers table {
-    font-family:Arial, Helvetica, sans-serif;
-    color:#666;
-    font-size:12px;
-    text-shadow: 1px 1px 0px #fff;
-    background:#eaebec;
-    margin-top: 20px;
-    border:#ccc 1px solid;
-    border-spacing: 0;
-    border-collapse: initial;
-
-    -moz-border-radius:3px;
-    -webkit-border-radius:3px;
-    border-radius:3px;
-
-    -moz-box-shadow: 0 1px 2px #d1d1d1;
-    -webkit-box-shadow: 0 1px 2px #d1d1d1;
-    box-shadow: 0 1px 2px #d1d1d1;
-}
-
-#Officers table th {
-    padding:11px 15px 12px 15px;
-    border-top:1px solid #fafafa;
-    border-bottom:1px solid #e0e0e0;
-
-    background: #ededed;
-    background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#ebebeb));
-    background: -moz-linear-gradient(top,  #ededed,  #ebebeb);
-    text-align: center;
-}
-
-#Officers table tr{
-    text-align: center;
-    padding-left:20px;
-}
-
-#Officers table tr td {
-    padding:8px;
-    border-top: 1px solid #ffffff;
-    border-bottom:1px solid #e0e0e0;
-    border-left: 1px solid #e0e0e0;
-    
-    background: #fafafa;
-    background: -webkit-gradient(linear, left top, left bottom, from(#fbfbfb), to(#fafafa));
-    background: -moz-linear-gradient(top,  #fbfbfb,  #fafafa);
-}
-
-#Officers label {
-    clear: left;
-    float: left;
-    width: 10em;
 }
